# take_off_drone

./: LICENSE  README.md  pyproject.toml  requirements.txt
drones/: __init__.py
drones/control/: BaseControl.py  DSLPIDControl.py  SimplePIDControl.py
drones/envs/: BaseAviary.py  CtrlAviary.py  DynAviary.py  VelocityAviary.py  VisionAviary.py  __init__.py
drones/envs/multi_agent_rl/: BaseMultiagentAviary.py  FlockAviary.py  LeaderFollowerAviary.py  MeetupAviary.py  __init__.py
drones/envs/single_agent_rl/: BaseSingleAgentAviary.py  FlyThruGateAviary.py  HoverAviary.py  TakeoffAviary.py  TuneAviary.py  __init__.py
drones/examples/: compare.py  learn.py
experiments/learning/: multiagent.py  singleagent.py  test_multiagent.py  test_singleagent.py
