[tool.poetry]
name = "take_off_drone"
version = "0.1"
description = "PyBullet Gym environments for single agent reinforcement learning of quadcopter control"
license = "MIT"
repository = "https://github.com/ziya44/take_off_drone"
packages = [
    { include = "take_off_drone" }
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22"
Pillow = "^9.0"
matplotlib = "^3.5"
cycler = "^0.10"
gym = "^0.21"
pybullet = "^3.2"
torch = "1.11.0"
"ray[rllib]" = "1.9"
stable-baselines3 = "1.5.0"
scipy = "^1.8"
tensorboard = "^2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"
